Commit to new branch

--- a/doro-scoresheet/Pages/Home.razor
+++ b/doro-scoresheet/Pages/Home.razor
@@ -2,7 +2,7 @@
 
 <PageTitle>Dorfromantik Score Sheet</PageTitle>
 
-<h1>Dorfromantik Score Sheet</h1>
+<h1>Dorfromantik Punktezähler</h1>
 
 <fieldset id="feature-selector">
     <legend>Erweiterungen</legend>
