--- a/doro-scoresheet/Pages/Home.razor
+++ b/doro-scoresheet/Pages/Home.razor
@@ -4,6 +4,19 @@
 
 <h1>Dorfromantik Punktezähler</h1>
 
+<h3>Aufträge</h3>
+<h3>Fahnen</h3>
+<h3>Freigespielt</h3>
+<h5>Basis</h5>
+@if (millExpansion)
+{
+    <h5>Mühle</h5>
+}
+@if (duelExpansion)
+{
+    <h5>Duell</h5>
+}
+
 <fieldset id="feature-selector">
     <legend>Erweiterungen</legend>
     <div>
