--- a/doro-scoresheet/Pages/Home.razor
+++ b/doro-scoresheet/Pages/Home.razor
@@ -52,15 +52,78 @@
 
 <h3>Freigespielt</h3>
 <h5>Basis</h5>
+<div>
+    <label for="unlock-redHeart" title="1/passende Kante">Rote Herzen</label>
+    <input type="number" id="unlock-redHeart" min="0" max="6" step="1" @bind-value="scoreTable.Unlockables.RedHearts" />
+</div>
+<div>
+    <label for="unlock-circus" title="Umschlossen = 10">Zirkus</label>
+    <input type="number" id="unlock-circus" min="0" max="10" step="10" @bind-value="scoreTable.Unlockables.Circus" />
+</div>
+<div>
+    <label for="unlock-signalman" title="2/Bahnübergang">Bahnwärter</label>
+    <input type="number" id="unlock-signalman" min="0" max="" step="2" @bind-value="scoreTable.Unlockables.Signalman" />
+</div>
+<div>
+    <label for="unlock-shepherd" title="1/Schaf">Schäferin</label>
+    <input type="number" id="unlock-shepherd" min="0" max="" step="1" @bind-value="scoreTable.Unlockables.Shepherd" />
+</div>
+<div>
+    <label for="unlock-hill" title="im Abstand 2 = 2/Auftrag">Hügel</label>
+    <input type="number" id="unlock-hill" min="0" max="" step="2" @bind-value="scoreTable.Unlockables.Hill" />
+</div>
+<div>
+    <label for="unlock-construction" title="pro Gebiet 7+ = 7">Baustelle</label>
+    <input type="number" id="unlock-construction" min="0" max="21" step="7" @bind-value="scoreTable.Unlockables.Construction" />
+</div>
+<div>
+    <label for="unlock-balloon" title="2/Entfernung">Ballon-Startplatz</label>
+    <input type="number" id="unlock-balloon" min="0" max="" step="2" @bind-value="scoreTable.Unlockables.Balloon" />
+</div>
+<div>
+    <label for="unlock-goldenHeart" title="2/passende Kante">Goldenes Herz</label>
+    <input type="number" id="unlock-goldenHeart" min="0" max="12" step="2" @bind-value="scoreTable.Unlockables.GoldenHeart" />
+</div>
+<div>
+    <label for="unlock-dblForest" title="Wald-Aufträge">Waldhütte</label>
+    <input type="number" id="unlock-dblForest" min="0" max="" step="1" @bind-value="scoreTable.Unlockables.ForestHut" />
+</div>
+<div>
+    <label for="unlock-dblWheat" title="Getreide-Aufträge">Erntefest</label>
+    <input type="number" id="unlock-dblWheat" min="0" max="" step="1" @bind-value="scoreTable.Unlockables.HarvestFestival" />
+</div>
+<div>
+    <label for="unlock-dblTown" title="Stadt-Aufträge">Wachturm</label>
+    <input type="number" id="unlock-dblTown" min="0" max="" step="1" @bind-value="scoreTable.Unlockables.GuardTower" />
+</div>
+<div>
+    <label for="unlock-dblRails" title="Schienen-Aufträge">Lokomotive</label>
+    <input type="number" id="unlock-dblRails" min="0" max="" step="1" @bind-value="scoreTable.Unlockables.Locomotive" />
+</div>
+<div>
+    <label for="unlock-dblRiver" title="Fluss-Aufträge">Schiff</label>
+    <input type="number" id="unlock-dblRiver" min="0" max="" step="1" @bind-value="scoreTable.Unlockables.Riverboat" />
+</div>
+<div>
+    <label for="unlock-trainstation" title="beendet = 1/Plättchen">Bahnhof</label>
+    <input type="number" id="unlock-trainstation" min="0" max="" step="1" @bind-value="scoreTable.Unlockables.Trainstation" />
+</div>
+<div>
+    <label for="unlock-harbor" title="beendet = 1/Plättchen">Hafen</label>
+    <input type="number" id="unlock-harbor" min="0" max="" step="1" @bind-value="scoreTable.Unlockables.Harbor" />
+</div>
 
 @if (millExpansion)
 {
     <h5>Mühle</h5>
 }
+
 @if (duelExpansion)
 {
     <h5>Duell</h5>
 }
+<h5>Summe Freigespielt: @scoreTable.Unlockables.Total</h5>
+
 <h4>Gesamt: @scoreTable.Total</h4>
 <fieldset id="feature-selector">
     <legend>Erweiterungen</legend>
