--- a/doro-scoresheet/Pages/Home.razor
+++ b/doro-scoresheet/Pages/Home.razor
@@ -1,191 +1,55 @@
 ﻿@page "/"
 
+@using doro;
+
 <PageTitle>Dorfromantik Score Sheet</PageTitle>
 
 <h1>Dorfromantik Punktezähler</h1>
 
-<h3>Aufträge</h3>
-<div class="input-group">
-    <h5>Basis</h5>
-    <div>
-        <label for="tasks-forest">Wald</label>
-        <input type="number" id="tasks-forest" min="0" max="37" @bind-value="scoreTable.Tasks.Forest" />
-    </div>
-    <div>
-        <label for="tasks-wheat">Getreide</label>
-        <input type="number" id="tasks-wheat" min="0" max="37" @bind-value="scoreTable.Tasks.Wheat" />
-    </div>
-    <div>
-        <label for="tasks-town">Stadt</label>
-        <input type="number" id="tasks-town" min="0" max="37" @bind-value="scoreTable.Tasks.Town" />
-    </div>
-    <div>
-        <label for="tasks-rails">Schiene</label>
-        <input type="number" id="tasks-rails" min="0" max="30" @bind-value="scoreTable.Tasks.Rails" />
-    </div>
-    <div>
-        <label for="tasks-river">Fluss</label>
-        <input type="number" id="tasks-river" min="0" max="30" @bind-value="scoreTable.Tasks.River" />
-    </div>
-</div>
-@if (duelExpansion)
-{
-    <div class="input-group">
-        <h5>Duell</h5>
-        <div>
-            <label for="tasks-double">Doppel</label>
-            <input type="number" id="tasks-double" min="0" max="18" @bind-value="scoreTable.Tasks.Double" />
-        </div>
-        <div>
-            <label for="tasks-surround">Rundum</label>
-            <input type="number" id="tasks-surround" min="0" max="18" @bind-value="scoreTable.Tasks.Surround" />
-        </div>
-    </div>
-}
-<h5>Summe Aufträge: @scoreTable.Tasks.Total</h5>
-
-<h3>Fahnen</h3>
-<div class="input-group">
-    <div>
-        <label for="flags-forest">Wald</label>
-        <input type="number" id="flags-forest" min="0" @bind-value="scoreTable.Flags.Forest" />
-    </div>
-    <div>
-        <label for="flags-wheat">Getreide</label>
-        <input type="number" id="flags-wheat" min="0" @bind-value="scoreTable.Flags.Wheat" />
-    </div>
-    <div>
-        <label for="flags-town">Stadt</label>
-        <input type="number" id="flags-town" min="0" @bind-value="scoreTable.Flags.Town" />
-    </div>
-    <div>
-        <label for="flags-rails">Längste Schiene</label>
-        <input type="number" id="flags-rails" min="0" @bind-value="scoreTable.Flags.Rails" />
-    </div>
-    <div>
-        <label for="flags-river">Längster Fluss</label>
-        <input type="number" id="flags-river" min="0" @bind-value="scoreTable.Flags.River" />
-    </div>
-</div>
-<h5>Summe Fahnen: @scoreTable.Flags.Total</h5>
-
-<h3>Freigespielt</h3>
-<div class="input-group">
-    <h5>Basis</h5>
-    <div>
-        <label for="unlock-redHeart" title="1/passende Kante">Rote Herzen</label>
-        <input type="number" id="unlock-redHeart" min="0" max="24" step="1" @bind-value="scoreTable.Unlockables.RedHearts" />
-    </div>
-    <div>
-        <label for="unlock-circus" title="Umschlossen = 10">Zirkus</label>
-        <input type="number" id="unlock-circus" min="0" max="10" step="10" @bind-value="scoreTable.Unlockables.Circus" />
-    </div>
-    <div>
-        <label for="unlock-signalman" title="2/Bahnübergang">Bahnwärter</label>
-        <input type="number" id="unlock-signalman" min="0" max="" step="2" @bind-value="scoreTable.Unlockables.Signalman" />
-    </div>
-    <div>
-        <label for="unlock-shepherd" title="1/Schaf">Schäferin</label>
-        <input type="number" id="unlock-shepherd" min="0" max="" step="1" @bind-value="scoreTable.Unlockables.Shepherd" />
-    </div>
-    <div>
-        <label for="unlock-hill" title="im Abstand 2 = 2/Auftrag">Hügel</label>
-        <input type="number" id="unlock-hill" min="0" max="" step="2" @bind-value="scoreTable.Unlockables.Hill" />
-    </div>
-    <div>
-        <label for="unlock-construction" title="pro Gebiet 7+ = 7">Baustelle</label>
-        <input type="number" id="unlock-construction" min="0" max="21" step="7" @bind-value="scoreTable.Unlockables.Construction" />
-    </div>
-    <div>
-        <label for="unlock-balloon" title="2/Entfernung">Ballon-Startplatz</label>
-        <input type="number" id="unlock-balloon" min="0" max="" step="2" @bind-value="scoreTable.Unlockables.Balloon" />
-    </div>
-    <div>
-        <label for="unlock-goldenHeart" title="2/passende Kante">Goldenes Herz</label>
-        <input type="number" id="unlock-goldenHeart" min="0" max="12" step="2" @bind-value="scoreTable.Unlockables.GoldenHeart" />
-    </div>
-    <div>
-        <label for="unlock-dblForest" title="Wald-Aufträge">Waldhütte</label>
-        <input type="number" id="unlock-dblForest" min="0" max="" step="1" @bind-value="scoreTable.Unlockables.ForestHut" />
-    </div>
-    <div>
-        <label for="unlock-dblWheat" title="Getreide-Aufträge">Erntefest</label>
-        <input type="number" id="unlock-dblWheat" min="0" max="" step="1" @bind-value="scoreTable.Unlockables.HarvestFestival" />
-    </div>
-    <div>
-        <label for="unlock-dblTown" title="Stadt-Aufträge">Wachturm</label>
-        <input type="number" id="unlock-dblTown" min="0" max="" step="1" @bind-value="scoreTable.Unlockables.GuardTower" />
-    </div>
-    <div>
-        <label for="unlock-dblRails" title="Schienen-Aufträge">Lokomotive</label>
-        <input type="number" id="unlock-dblRails" min="0" max="" step="1" @bind-value="scoreTable.Unlockables.Locomotive" />
-    </div>
-    <div>
-        <label for="unlock-dblRiver" title="Fluss-Aufträge">Schiff</label>
-        <input type="number" id="unlock-dblRiver" min="0" max="" step="1" @bind-value="scoreTable.Unlockables.Riverboat" />
-    </div>
-    <div>
-        <label for="unlock-trainstation" title="beendet = 1/Plättchen">Bahnhof</label>
-        <input type="number" id="unlock-trainstation" min="0" max="" step="1" @bind-value="scoreTable.Unlockables.Trainstation" />
-    </div>
-    <div>
-        <label for="unlock-harbor" title="beendet = 1/Plättchen">Hafen</label>
-        <input type="number" id="unlock-harbor" min="0" max="" step="1" @bind-value="scoreTable.Unlockables.Harbor" />
-    </div>
-</div>
-
-@if (millExpansion)
-{
-    <div class="input-group">
-        <h5>Mühle</h5>
-        <div>
-            <label for="unlock-mill" title="abgeschlossen = 2/Auftrag + 2/Fahne">Große Mühle</label>
-            <input type="number" id="unlock-mill" min="0" max="" step="2" @bind-value="scoreTable.Unlockables.Mill" />
-        </div>
-    </div>
-}
-
-@if (duelExpansion)
-{
-    <div class="input-group">
-        <h5>Duell</h5>
-        <div>
-            <label for="unlock-photo" title="1/Kameramarker">Fotograf</label>
-            <input type="number" id="unlock-photo" min="0" max="" step="1" @bind-value="scoreTable.Unlockables.Photographer" />
-        </div>
-        <div>
-            <label for="unlock-school" title="im Abstand 2 = 1/Stadtplättchen">Schule</label>
-            <input type="number" id="unlock-school" min="0" max="" step="1" @bind-value="scoreTable.Unlockables.School" />
-        </div>
-        <div>
-            <label for="unlock-granary" title="im Abstand 2 = 1/Getreideplättchen">Kornspeicher</label>
-            <input type="number" id="unlock-granary" min="0" max="" step="1" @bind-value="scoreTable.Unlockables.Granary" />
-        </div>
-        <div>
-            <label for="unlock-oak" title="im Abstand 2 = 1/Waldplättchen">Alte Eiche</label>
-            <input type="number" id="unlock-oak" min="0" max="" step="1" @bind-value="scoreTable.Unlockables.Oak" />
-        </div>
-    </div>
-}
-<h5>Summe Freigespielt: @scoreTable.Unlockables.Total</h5>
-
-<hr />
-<h5>Aufgaben: @scoreTable.Tasks.Total</h5>
-<h5>Fahnen: @scoreTable.Flags.Total</h5>
-<h5>Freigespielt: @scoreTable.Unlockables.Total</h5>
-<h4>Gesamt: @scoreTable.Total</h4>
-
 <fieldset id="feature-selector">
     <legend>Erweiterungen</legend>
-    <div>
-        <input type="checkbox" id="mill-checkbox" name="mill-checkbox" @bind-value="millExpansion" />
-        <label for="mill-checkbox">Mühle</label>
-    </div>
-    <div>
-        <input type="checkbox" id="duel-checkbox" name="duel-checkbox" @bind-value="duelExpansion" />
-        <label for="duel-checkbox">Duell</label>
-    </div>
+
+    @foreach (var expansion in expansions)
+    {
+        <div>
+            <input type="checkbox" id="expansion-@expansion.Id"
+                   name="@expansion.Id"
+                   checked="@game.HasPack(expansion.Id)"
+                   @onchange="() => ToggleExpansion(expansion.Id)" />
+            <label for="@expansion.Id">@expansion.Name</label>
+        </div>
+    }
 </fieldset>
+
+@foreach (string category in game.GetCategories())
+{
+    <h3>@game.GetCategoryName(category)</h3>
+    @foreach (GoalPack pack in game.GoalPacks.Where(p => p.HasCategory(category)))
+    {
+        <div class="input-group">
+        <h5>@pack.Name</h5>
+        @foreach (Goal goal in pack.GetCategory(category).Goals)
+        {
+            string inputId = $"{pack.Id}-{category}-{goal.Id}";
+            <div class="goal-score-input">
+                <label for="@inputId">@goal.Name</label>
+                <input type="number" id="@inputId" 
+                    min="@goal.Minimum" max="@goal.Maximum" step="@goal.Step"
+                    @bind-value="scoreSheet[pack.Id, category, goal.Id]" />
+            </div>
+        }
+        </div>
+    }
+    <h5>Summe @(game.GetCategoryName(category)): @scoreSheet.GetCategoryScore(game, category)</h5>
+}
+
+<hr />
+
+@foreach (string category in game.GetCategories())
+{
+    <h5>@game.GetCategoryName(category): @scoreSheet.GetCategoryScore(game, category)</h5>
+}
+<h4>Gesamt: @scoreSheet.GetTotalScore(game)</h4>
 
 <style>
     #feature-selector {
@@ -209,12 +73,35 @@
         justify-content: space-between;
         padding: 0.5em;
     }
+
+    div.goal-score-input {
+        margin-top: 1px;
+        margin-bottom: 1px;
+    }
 </style>
 
 @code
 {
-    private bool millExpansion = false;
-    private bool duelExpansion = false;
+    private ScoreTable scoreTable = new ScoreTable();
 
-    private doro.ScoreTable scoreTable = new doro.ScoreTable();
+    private GameConfiguration game = GameFactory.GetBaseGame();
+    private List<GoalPack> expansions = new() { GameFactory.GetMillGoals(), GameFactory.GetDuelGoals() };
+
+    private ScoreSheet scoreSheet = new("Spieler");
+
+    void ToggleExpansion(string expansionId)
+    {
+        var expansion = expansions.FirstOrDefault(e => e.Id == expansionId);
+        if (expansion != null)
+        {
+            if (game.HasPack(expansion.Id))
+            {
+                game.RemovePack(expansion.Id);
+            }
+            else
+            {
+                game.AddPack(expansion);
+            }
+        }
+    }
 }
