--- a/doro-scoresheet/Pages/Home.razor
+++ b/doro-scoresheet/Pages/Home.razor
@@ -49,15 +49,22 @@
                 {
                     string inputId = $"{pack.Id}-{category}-{goal.Id}";
                     <div class="goal-score-input">
-                        <label for="@inputId">@goal.Name</label>
-                        <input type="number" id="@inputId" 
-                        min="@goal.Minimum" max="@goal.Maximum" step="@goal.Step"
-                        @bind-value="Scores[pack.Id, category, goal.Id]" />
+                        <label for="@inputId-0">@goal.Name</label>
+                        <div style="display:flex;flex-direction:column">
+                            @for (int i = 0; i < Scores.Length; i++)
+                            {
+                                int index = i;
+                                <input type="number" id="@inputId-@index" 
+                                    class="@((Scores.Length == 1) ? "singlePlayer" : (index == 0) ? "redPlayer" : "bluePlayer")"
+                                    min="@goal.Minimum" max="@goal.Maximum" step="@goal.Step"
+                                    @bind-value="Scores[index][pack.Id, category, goal.Id]" />
+                            }
+                        </div>
                     </div>
                 }
             </div>
         }
-        <h5>Summe @(Game.GetCategoryName(category)): @Scores.GetCategoryScore(Game, category)</h5>
+        <h5>Summe @(Game.GetCategoryName(category)): @String.Join(" - ", Scores.Select(s => s.GetCategoryScore(Game, category)))</h5>
     }
 }
 
@@ -65,9 +72,9 @@
 
 @foreach (string category in Game.GetCategories())
 {
-    <h5>@Game.GetCategoryName(category): @Scores.GetCategoryScore(Game, category)</h5>
+    <h5>Summe @(Game.GetCategoryName(category)): @String.Join(" - ", Scores.Select(s => s.GetCategoryScore(Game, category)))</h5>
 }
-<h4>Gesamt: @Scores.GetTotalScore(Game)</h4>
+<h4>Gesamt: @String.Join(" - ", Scores.Select(s => s.GetTotalScore(Game)))</h4>
 
 <style>
     #feature-selector-box {
@@ -95,6 +102,18 @@
         width: 100px;
     }
 
+    input.singlePlayer {
+
+    }
+
+    input.redPlayer {
+        background-color: lightcoral;
+    }
+
+    input.bluePlayer {
+        background-color: lightblue;
+    }
+
     div.input-group {
         display: flex;
         flex-direction: column;
@@ -105,22 +124,36 @@
     div.goal-score-input {
         margin-top: 1px;
         margin-bottom: 1px;
+        display: flex;
+        flex-direction: row;
+        justify-content: flex-start;
+        flex-wrap: wrap;
     }
 </style>
 
 @code
 {
+    public Home()
+    {
+        SetGame(Games.GetAllGames().First());
+    }
+
     private GameConfiguration Game = GameFactory.GetBaseGame();
 
-    private GameDefinition Definition = Games.GetAllGames().First();
+    private GameDefinition Definition;
 
-    private ScoreSheet Scores = new("Spieler");
+    private ScoreSheet[] Scores;
 
     void SetGame(GameDefinition gameDefinition)
     {
         Definition = gameDefinition;
         Game = gameDefinition.GetBaseConfiguration();
-        Scores = new ScoreSheet("Spieler");
+
+        int players = Math.Clamp(Definition.Players, 1, 2); // limit to 2 players for now
+        List<string> playerNames = (players == 1) 
+            ? new List<string> { "Spieler" } 
+            : new List<string> { "Rot", "Blau" };
+        Scores = playerNames.Select(p => new ScoreSheet(p)).ToArray();
     }
 
     void ToggleExpansion(string expansionId)
