--- a/doro-scoresheet/Pages/Home.razor
+++ b/doro-scoresheet/Pages/Home.razor
@@ -143,7 +143,7 @@
         SetGame(Games.GetAllGames().First());
     }
 
-    private GameConfiguration Game = GameFactory.GetBaseGame();
+    private GameConfiguration Game;
 
     private GameDefinition Definition;
 
