--- a/doro-scoresheet/wwwroot/css/app.css
+++ b/doro-scoresheet/wwwroot/css/app.css
@@ -98,6 +98,10 @@ a, .btn-link {
         content: var(--blazor-load-percentage-text, "Loading");
     }
 
+.input-group > :not(:first-child):not(.dropdown-menu):not(.valid-tooltip):not(.valid-feedback):not(.invalid-tooltip):not(.invalid-feedback) {
+    margin-left: 0 !important;
+}
+
 code {
     color: #c02d76;
 }
