--- a/doro-scoresheet/Pages/Home.razor
+++ b/doro-scoresheet/Pages/Home.razor
@@ -4,7 +4,7 @@
 
 <PageTitle>Dorfromantik Score Sheet</PageTitle>
 
-<h1>Dorfromantik Punktezähler</h1>
+<h1>Dorfromantik Punktezettel</h1>
 
 <fieldset id="feature-selector-box">
     <div id="feature-selector">
