--- a/doro-scoresheet/_Imports.razor
+++ b/doro-scoresheet/_Imports.razor
@@ -6,5 +6,5 @@
 @using Microsoft.AspNetCore.Components.Web.Virtualization
 @using Microsoft.AspNetCore.Components.WebAssembly.Http
 @using Microsoft.JSInterop
-@using doro_scoresheet
-@using doro_scoresheet.Layout
+@using DoroScoreSheet
+@using DoroScoreSheet.Layout
