--- a/doro-scoresheet/Pages/Home.razor
+++ b/doro-scoresheet/Pages/Home.razor
@@ -53,8 +53,8 @@
                 {
                     string inputId = $"{pack.Id}-{category}-{goal.Id}";
                     <div class="goal-score-input">
-                        <label for="@inputId-0">@goal.Name</label>
-                        <div style="display:flex;flex-direction:column">
+                        <label for="@inputId-0" title="@goal.Description">@goal.Name</label>
+                        <div style="display:flex;flex-direction:column" title="@goal.Description">
                             @for (int i = 0; i < Scores.Length; i++)
                             {
                                 int index = i;
@@ -100,6 +100,7 @@
     label {
         display: inline-block;
         width: 150px;
+        padding-top: 2px;
     }
 
     input[type=number] {
