--- a/doro-scoresheet/Pages/Home.razor
+++ b/doro-scoresheet/Pages/Home.razor
@@ -53,7 +53,7 @@
                 {
                     string inputId = $"{pack.Id}-{category}-{goal.Id}";
                     <div class="goal-score-input">
-                        <label for="@inputId-0" title="@goal.Description">@goal.Name</label>
+                        <label class="goal-label" for="@inputId-0" title="@goal.Description">@goal.Name</label>
                         <div style="display:flex;flex-direction:column" title="@goal.Description">
                             @for (int i = 0; i < Scores.Length; i++)
                             {
@@ -100,6 +100,9 @@
     label {
         display: inline-block;
         width: 150px;
+    }
+
+    .goal-label {
         padding-top: 2px;
     }
 
